gui: Use Monocle to run tests in headless mode